2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/ledger-line-engraver.cc (acknowledge_staff_symbol): only
	create new spanner for non-null left bounded staff symbol.	

2006-05-31  Erlend Aasland  <erlenda@gmail.com>

	* dynamic-engraver.cc: fix bug (dynamics collide with accidentals)

2006-05-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/lilypond-book.py (Lilypond_file_snippet.ly): strip
	version number.
	(PREAMBLE_LY): copy from -devel branch.

	* VERSION (PATCH_LEVEL): bump to .4

	* lily/parser.yy (simple_markup): replace THIS with PARSER.

	* ly/Welcome-to-LilyPond-MacOS.ly: include in LilyPond, so version
	number stays up to date.
	
	* buildscripts/output-distance.py
	(ComparisonData.create_html_result_page): new routine: summarise
	results in HTML page with images. 
	(ComparisonData.create_text_result_page): create summary text files too.

	* GNUmakefile.in (web-ext): package .signature files too. They
	compress well. 

	* scm/stencil.scm (write-system-signature): typo.

	* GNUmakefile.in: create web-root/VERSION to help upload scripts.

	* scm/stencil.scm (write-system-signature): better escaping.
	only write signature for music systems, not for markup systems.

	* scm/framework-ps.scm (output-framework): dump-signatures support
	for plain output.

	* make/lilypond-vars.make (LILYPOND_BOOK_FLAGS): add -ddump-signatures.

	* scm/framework-ps.scm (write-preamble): redefine mark_URI to nop
	for -dno-point-and-click

	* lily/grob.cc (get_print_stencil): don't read
	point_and_click_global to determine whether to set grob-cause.

	* buildscripts/output-distance.py (main): new function.
	(ComparisonData): new class.

	* lily/ledger-line-engraver.cc (acknowledge_staff_symbol): be more
	careful with generating new LedgerLineSpanners.

	* lily/ledger-line-spanner.cc (set_spacing_rods): suicide if no staff.

	* ly/engraver-init.ly: remove Ledger_line_engraver from Voice
	context. This fixes double ledger lines in output. 
